2013-02-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

	* Add --rec_apn documentation to nco.texi

2013-01-31  Charlie Zender  <zender@uci.edu>

	* Add --rec_apn regression tests

	* Add --rec_apn to ncra and ncrcat. Makes possible direct appends.

2013-01-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.5 release procedure:
 	Changes since nco-4_2_4: fix ncks mk/fix_rec_dmn bugs, metadata printing
	cd ~/nco;cvs tag -d nco-4_2_5;cvs tag -d nco-4_2_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.5 release"
	cvs tag -c nco-4_2_5;cvs tag -c nco-4_2_5-1

2013-01-27  Charlie Zender  <zender@uci.edu>

	* Update documentation to refect new --fix_rec_dmn syntax

	* Fix 4.2.4 bug that broke --fix_rec_dmn

	* Add --fix_rec_dmn regression tests, including netCDF3 test with MM3 workaround

	* Remove tm2_tm3 from in_grp.cdl since ncgen netCDF 4.2.1- chokes on it

	* Allow for --fix_rec_dmn corner case in nco_cpy_rec_var_val(),
	i.e., when variable is record in input but not in output

	* Parse --fix_rec_dmn by prefixing dimension name with "fix_". Kludgy? Yes.

2013-01-26  Charlie Zender  <zender@uci.edu>

	* Remove all record-dimension handling from, and thus dramatically simplify, nco_xtr_dfn()

	* Test and merge nco_cpy_var_dfn() changes to nco_cpy_var_dfn_lmt()

	* ncks only copies global metadata once

	* ncks prints multiple root record dimensions

	* nco_prn_var_dfn() handles multiple record dimensions

	* Add tm2_tm3 to allow netCDF4 regression tests on variables with multiple record dimensions

	* Fix 4.2.4 bug that broke --mk_rec_dmn

	* Smarten nco_cpy_var_dfn() to allow multiple netCDF4 record dimensions

	* Add --mk_rec_dmn regression tests

	* New API: pass rec_dmn_nm to nco_cpy_var_dfn*() only when user-specified
